# SmartCalculator-CPP

./: Dockerfile  Makefile  doxyfile.cfg
controller/: calc_controller.cc  calc_controller.h
model/: polish.cc  polish.h
tests/: s21_smart_calc_v2_tests.cc
view/: CMakeLists.txt  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  qcustomplot.h
